@@ -31,14 +31,14 @@ Sample: "Data"
     
 Sample: "Bkg1"
   Type: BACKGROUND
-  Title: "Background"
+  Title: "Background1"
   FillColor: 400
   LineColor: 1
   HistoFile: "bkg1"
 
 Sample: "Bkg2"
   Type: BACKGROUND
-  Title: "Background"
+  Title: "Background2"
   FillColor: 591
   LineColor: 1
   HistoFile: "bkg2"
